syntax = "proto3";

package go.micro.srv.GetUserOrder;

service Example {
	rpc GetUserOrder(Request) returns (Response) {}
	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}
}

message Message {
	string say = 1;
}
//传入
message Request {
//	角色
	string role = 1;
//sessionid
    string Sessionid = 2;
}

message Response {
//	错误码
    string Errno=1 ;
//错误信息
    string Errmsg=2 ;
//订单的二进制数据流
	bytes Orders = 3;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
